Binding for episode page and adjusting styles

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
+    android:label="Detalhes"
     app:startDestination="@id/homeFragment">
 
     <fragment
@@ -22,5 +23,17 @@
         <argument
             android:name="showDetails"
             app:argType="com.kiwizitos.moviedatabase.features.detail.domain.entities.ShowEntity" />
+        <action
+            android:id="@+id/action_detailPageFragment_to_episodeDetailFragment"
+            app:destination="@id/episodeDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/episodeDetailFragment"
+        android:name="com.kiwizitos.moviedatabase.features.episodeDetail.presentation.EpisodeDetailFragment"
+        android:label="Episódio"
+        tools:layout="@layout/fragment_episode_detail">
+        <argument
+            android:name="episodeDetails"
+            app:argType="com.kiwizitos.moviedatabase.features.detail.domain.entities.ShowEpisodesEntity" />
     </fragment>
 </navigation>
