--- a/app/src/main/res/layout/fragment_episode_detail.xml
+++ b/app/src/main/res/layout/fragment_episode_detail.xml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".features.episodeDetail.presentation.EpisodeDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/img_episode_image"
+        style="@style/ShowDetailsWallpaperImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="150dp"
+        android:adjustViewBounds="true"
+        android:background="@color/material_dynamic_neutral20"
+        android:scaleType="centerCrop"
+        app:shapeAppearance="@style/ShowDetailsWallpaperImage" />
 
-</FrameLayout>
+
+    <TextView
+        android:id="@+id/txt_episode_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/episode_name"
+        android:textColor="@color/white"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/txt_episode_season"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_episode_name"
+        android:layout_marginStart="8dp"
+        android:text="@string/episode_season"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/txt_episode_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_episode_season"
+        android:layout_marginStart="8dp"
+        android:text="@string/episode_number"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/txt_episode_resume_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/img_episode_image"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/episode_resume_header"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/txt_episode_resume"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt_episode_resume_header"
+        android:layout_marginHorizontal="8dp"
+        android:text="@string/episode_resume"
+        android:textColor="@color/black" />
+
+</RelativeLayout>
