--- a/app/src/main/res/layout/show_cell.xml
+++ b/app/src/main/res/layout/show_cell.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:layout_height="wrap_content">
+
     <androidx.cardview.widget.CardView
         android:layout_width="fill_parent"
         android:layout_height="130dp"
+        android:layout_margin="10dp"
         app:cardBackgroundColor="@color/material_dynamic_neutral95"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="0dp" >
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -19,12 +20,14 @@
             android:clipToPadding="false"
             android:padding="8dp">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/show_image"
+                style="@style/ShowHomeWallpaperImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                app:shapeAppearance="@style/ShowHomeWallpaperImage"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
@@ -44,22 +47,33 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_toStartOf="@+id/show_id"
-                android:layout_toEndOf="@+id/show_image"
                 android:layout_below="@id/show_name"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp"
+                android:layout_toStartOf="@+id/show_id"
+                android:layout_toEndOf="@+id/show_image" />
+
+            <ImageView
+                android:id="@+id/img_rating"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_below="@id/divider"
+                android:layout_marginStart="8dp"
+                android:layout_toEndOf="@id/show_image"
+                android:src="@drawable/star" />
 
             <TextView
                 android:id="@+id/show_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_toStartOf="@+id/show_id"
-                android:layout_toEndOf="@+id/show_image"
-                android:layout_below="@id/divider"
-                android:text="@string/show_rating"/>
+                android:layout_alignTop="@+id/img_rating"
+                android:layout_alignBottom="@+id/img_rating"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:layout_toEndOf="@+id/img_rating"
+                android:text="@string/show_rating"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/show_id"
@@ -78,13 +92,14 @@
                 android:layout_below="@id/show_rating"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_toEndOf="@+id/show_image"
-                android:maxLines="4"
                 android:ellipsize="end"
-                android:text="@string/show_description"
-                android:textSize="12sp"
-                android:textColor="@color/black"/>
+                android:maxLines="3"
+                android:text="@string/show_resume"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
