--- a/app/src/main/res/layout/show_episode_cell.xml
+++ b/app/src/main/res/layout/show_episode_cell.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cdv_episode"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_margin="10dp"
-        app:cardElevation="10dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
         app:cardPreventCornerOverlap="true">
 
         <RelativeLayout
@@ -25,33 +24,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageView
                 android:id="@+id/ivShadow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="@string/home_wallpaper"
                 android:alpha="0.5"
-                android:background="@color/alpha_shadow"/>
+                android:background="@color/alpha_shadow" />
 
             <TextView
                 android:id="@+id/episode_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/episode_name"
-                android:textColor="@color/white"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="20sp"
                 android:padding="8dp"
+                android:text="@string/episode_name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/white"
 
-                android:layout_marginStart="10dp"/>
+                android:textSize="20sp" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/divider"
@@ -60,17 +58,17 @@
                 android:layout_below="@id/episode_name"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp" />
 
             <TextView
                 android:id="@+id/episode_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:text="@string/show_episode"
-                android:textColor="@color/white"
+                android:layout_marginStart="10dp"
                 android:padding="8dp"
-                android:layout_marginStart="10dp"/>
+                android:text="@string/show_episode"
+                android:textColor="@color/white" />
 
 
         </RelativeLayout>
