--- a/app/src/main/res/layout/fragment_detail_page.xml
+++ b/app/src/main/res/layout/fragment_detail_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,152 +7,147 @@
     android:orientation="vertical"
     tools:context=".features.detail.presentation.DetailPageFragment">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cdv_image"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            app:cardPreventCornerOverlap="true">
+
+            <ImageView
+                android:id="@+id/img_show_banner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/ic_launcher" />
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/txt_show_name"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/cdv_image"
+            android:text="@string/show_name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/txt_genres_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_show_name"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/cdv_image"
+            android:text="@string/show_genres_header"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/txt_show_genre_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_genres_header"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/cdv_image"
+            android:text="@string/show_genre"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/txt_show_genre_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_show_genre_1"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/cdv_image"
+            android:text="@string/show_genre"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/txt_show_genre_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_show_genre_2"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/cdv_image"
+            android:text="@string/show_genre"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/txt_summary_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/divider_summary"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:text="@string/show_resume_header" />
+
+        <TextView
+            android:id="@+id/txt_show_summary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_summary_header"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:clickable="true"
+            android:ellipsize="end"
+            android:focusable="true"
+            android:maxLines="3"
+            android:text="@string/show_resume"
+            android:textColor="@color/black" />
+
+        <ImageButton
+            android:id="@+id/btn_show_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:layout_below="@id/txt_show_summary"
+            android:animateLayoutChanges="true"
+            android:background="#00FFFFFF"
+            android:src="@drawable/more" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cdv_image"
-                android:layout_width="150dp"
-                android:layout_height="200dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="10dp"
-                app:cardPreventCornerOverlap="true">
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/cdv_image" />
 
-                <ImageView
-                    android:id="@+id/show_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@mipmap/ic_launcher" />
-            </androidx.cardview.widget.CardView>
+        <Spinner
+            android:id="@+id/spn_seasons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/divider"
+            android:layout_alignParentEnd="true"
+            android:spinnerMode="dropdown" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_episodes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spn_seasons"
+            android:nestedScrollingEnabled="false"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="2"
+            tools:listitem="@layout/show_episode_cell" />
 
-            <TextView
-                android:id="@+id/show_name"
-                android:layout_width="wrap_content"
-                android:layout_height="64dp"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/cdv_image"
-                android:text="@string/show_name"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="24sp" />
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider_summary"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/rcv_episodes" />
 
-            <TextView
-                android:id="@+id/genres"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/show_name"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/cdv_image"
-                android:text="@string/show_genres_header"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/show_genre_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/genres"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/cdv_image"
-                android:text="@string/show_genre"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/show_genre_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/show_genre_1"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/cdv_image"
-                android:text="@string/show_genre"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/show_genre_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/show_genre_2"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/cdv_image"
-                android:text="@string/show_genre"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/txt_summary_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/divider_summary"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:text="@string/show_resume_header" />
-
-            <TextView
-                android:id="@+id/show_summary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txt_summary_header"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:clickable="true"
-                android:ellipsize="end"
-                android:focusable="true"
-                android:maxLines="3"
-                android:text="@string/show_resume"
-                android:textColor="@color/black" />
-
-            <ImageButton
-                android:id="@+id/show_summary_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/show_summary"
-                android:animateLayoutChanges="true"
-                android:background="#00FFFFFF"
-                android:src="@drawable/more" />
-
-            <com.google.android.material.divider.MaterialDivider
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_below="@id/cdv_image" />
-
-            <Spinner
-                android:id="@+id/spn_seasons"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/divider"
-                android:layout_alignParentEnd="true"
-                android:spinnerMode="dropdown" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_episodes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/spn_seasons"
-                android:nestedScrollingEnabled="false"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:itemCount="2"
-                tools:listitem="@layout/show_episode_cell" />
-
-            <com.google.android.material.divider.MaterialDivider
-                android:id="@+id/divider_summary"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_below="@id/rcv_episodes" />
-
-        </RelativeLayout>
-    </ScrollView>
-</LinearLayout>
+    </RelativeLayout>
+</ScrollView>
