--- a/app/src/main/res/layout/show_cell.xml
+++ b/app/src/main/res/layout/show_cell.xml
@@ -21,7 +21,7 @@
             android:padding="8dp">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/show_image"
+                android:id="@+id/img_show_banner"
                 style="@style/ShowHomeWallpaperImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,14 +31,14 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/show_name"
+                android:id="@+id/txt_show_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_toStartOf="@+id/show_id"
-                android:layout_toEndOf="@+id/show_image"
+                android:layout_toStartOf="@+id/txt_show_id"
+                android:layout_toEndOf="@+id/img_show_banner"
                 android:text="@string/show_name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
@@ -47,36 +47,36 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/show_name"
+                android:layout_below="@id/txt_show_name"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:layout_toStartOf="@+id/show_id"
-                android:layout_toEndOf="@+id/show_image" />
+                android:layout_toStartOf="@+id/txt_show_id"
+                android:layout_toEndOf="@+id/img_show_banner" />
 
             <ImageView
-                android:id="@+id/img_rating"
+                android:id="@+id/icon_rating"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_below="@id/divider"
                 android:layout_marginStart="8dp"
-                android:layout_toEndOf="@id/show_image"
+                android:layout_toEndOf="@id/img_show_banner"
                 android:src="@drawable/star" />
 
             <TextView
-                android:id="@+id/show_rating"
+                android:id="@+id/txt_show_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/img_rating"
-                android:layout_alignBottom="@+id/img_rating"
+                android:layout_alignTop="@+id/icon_rating"
+                android:layout_alignBottom="@+id/icon_rating"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="0dp"
-                android:layout_toEndOf="@+id/img_rating"
+                android:layout_toEndOf="@+id/icon_rating"
                 android:text="@string/show_rating"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/show_id"
+                android:id="@+id/txt_show_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -86,15 +86,15 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/show_summary"
+                android:id="@+id/txt_show_summary"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_below="@id/show_rating"
+                android:layout_below="@id/txt_show_rating"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_toEndOf="@+id/show_image"
+                android:layout_toEndOf="@+id/img_show_banner"
                 android:ellipsize="end"
                 android:maxLines="3"
                 android:text="@string/show_resume"
