--- a/app/src/main/res/layout/show_episode_cell.xml
+++ b/app/src/main/res/layout/show_episode_cell.xml
@@ -20,7 +20,7 @@
             android:clipToPadding="false">
 
             <ImageView
-                android:id="@+id/episode_image"
+                android:id="@+id/img_episode_banner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -32,14 +32,14 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageView
-                android:id="@+id/ivShadow"
+                android:id="@+id/img_shadow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.5"
                 android:background="@color/alpha_shadow" />
 
             <TextView
-                android:id="@+id/episode_name"
+                android:id="@+id/txt_episode_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -55,13 +55,13 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/episode_name"
+                android:layout_below="@id/txt_episode_name"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp" />
 
             <TextView
-                android:id="@+id/episode_number"
+                android:id="@+id/txt_episode_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
