--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.kiwizitos.moviedatabase.features.home.presentation.HomeFragment"
-        android:label="Séries"
+        android:label="@string/home_label"
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_detailPageFragment"
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/detailPageFragment"
         android:name="com.kiwizitos.moviedatabase.features.detail.presentation.DetailPageFragment"
-        android:label="Detalhes"
+        android:label="@string/show_detail_label"
         tools:layout="@layout/fragment_detail_page">
         <argument
             android:name="showDetails"
@@ -30,7 +30,7 @@
     <fragment
         android:id="@+id/episodeDetailFragment"
         android:name="com.kiwizitos.moviedatabase.features.episodeDetail.presentation.EpisodeDetailFragment"
-        android:label="Episódio"
+        android:label="@string/episode_detail_label"
         tools:layout="@layout/fragment_episode_detail">
         <argument
             android:name="episodeDetails"
