Add README.md and adjust the search field to be always expanded

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,9 @@
     <SearchView
         android:id="@+id/srv_show"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        android:queryHint="Pesquisar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
